[package]
name = "cfg_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot2 = "1.0.0"
goblin = "0.7.1"
hex = "0.4.3"
iced-x86 = "1.1.0"
petgraph = "0.6.3"
serde = { version = "1.0.179", features = ["derive"] }
serde_yaml = "0.9.25"
kendalls = "0.2.1"
either = "1.9.0"
log = "0.4.20"
env_logger = "0.10.0"
